frontend-dep.yml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: frontend-dep
 namespace: test-ns
spec:
 replicas: 3
 selector:
  matchLabels:
   app: frontend-app
 template:
  metadata:
   name: frontend-pod
   labels:
    app: frontend-app
  spec:
   containers:
    - name: frontend-container
      image: razaaa2gud/frontend-app:v3
      ports:
       - containerPort: 5173
