backend-svc.yml
kind: Service
apiVersion: v1
metadata:
 name: backend-service
 namespace: test-ns
spec:
 selector:
  app: backend-app
 ports:
  - protocol: TCP
    port: 4001
    targetPort: 4001
 type: ClusterIP
